# Deeploy

./: .buildinfo  .clang-format  .devcontainer.json  .gitignore  .gitlab-ci.yml  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .style.yapf  .yamllint  .yapfignore  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  Deeploy.code-workspace  GAP9.md  GlobalAveragePool_input.py  GlobalAveragePool_output.py  LICENSE  Makefile  README.md  REUSE.toml  apidocs.html  deeploy.sh  genindex.html  index.html  install.html  localCI.sh  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  releasing.html  requirements-dev.txt  search.html  setup.py  structure.html  versions.html
DeeployTest/: CMakeLists.txt  README.md  conftest.py  debug.txt  debug_cct.txt  debugcct2.txt  debuggemm.txt  debugmemory.txt  deeployRunner_chimera.py  deeployRunner_cortexm.py  deeployRunner_gap9.py  deeployRunner_generic.py  deeployRunner_mempool.py  deeployRunner_siracusa.py  deeployRunner_snitch.py  deeployRunner_softhier.py  deeployRunner_tiled_gap9.py  deeployRunner_tiled_siracusa.py  deeployRunner_tiled_siracusa_w_neureka.py  deeployRunner_tiled_snitch.py  deeployStateEqualityTest.py  generateNetwork.py  output.txt  profiling2csv.py  pytest.ini  testComponentGraph.py  testDebugPrintPass.py  testDmas.py  testEngineAwareOptimizerWrapper.py  testMVP.py  testMemoryLevelExtension.py  testPrintInputOutputTransformation.py  testRegexMatching.py  testReplaceInsertSubgraph.py  testRunner_L3Dma.py  testRunner_MchanDma.py  testRunner_PULPOpen.py  testRunner_PULPOpen_iDMA.py  testRunner_PULPOpen_iDMA_shapes.py  testRunner_SnitchDma.py  (+38 more)
DeeployTest/Tests/Adder/: inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/Attention/: activations.npz  inputs.npz
DeeployTest/Tests/Autoencoder1D/: outputs.npz
DeeployTest/Tests/CCT/: inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/Dequant/: inputs.npz  outputs.npz
DeeployTest/Tests/EEGFormer/: activations.npz  outputs.npz
DeeployTest/Tests/GlobalAveragePool/: inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/ICCT/: activations.npz  inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/ICCT_8/: network.onnx
DeeployTest/Tests/ICCT_ITA/: activations.npz
DeeployTest/Tests/ICCT_ITA_8/: outputs.npz
DeeployTest/Tests/MultIO/: inputs.npz
DeeployTest/Tests/Quant/: inputs.npz  network.onnx
DeeployTest/Tests/QuantizedLinear/: inputs.npz  outputs.npz
DeeployTest/Tests/RQHardswish/: inputs.npz  network.onnx
DeeployTest/Tests/TestAdderLarge/: inputs.npz
DeeployTest/Tests/TestAutoenc/: inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/TestRQAdd/: activations.npz  inputs.npz  outputs.npz
DeeployTest/Tests/TestiNoNorm/: network.onnx  outputs.npz
DeeployTest/Tests/TestiSoftmaxLarge/: inputs.npz  network.onnx
DeeployTest/Tests/WaveFormer/: network.onnx
DeeployTest/Tests/largeFloatAdd/: network.onnx
DeeployTest/Tests/miniMobileNet/: activations.npz  inputs.npz  outputs.npz
DeeployTest/Tests/miniMobileNetv2/: inputs.npz  outputs.npz
DeeployTest/Tests/simpleCNN/: activations.npz  inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/simpleRegression/: activations.npz  inputs.npz
DeeployTest/Tests/test1DConvolution/: inputs.npz  network.onnx
DeeployTest/Tests/test1DDWConvolution/: inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/test1DPad/: inputs.npz  network.onnx
DeeployTest/Tests/test2DConvolution/: inputs.npz  outputs.npz
DeeployTest/Tests/test2DDWConvolution/: network.onnx  outputs.npz
DeeployTest/Tests/test2DPad/: inputs.npz
DeeployTest/Tests/test2DRequantizedConv/: network.onnx  outputs.npz
DeeployTest/Tests/test2DRequantizedStriddedPaddedConv/: network.onnx
DeeployTest/Tests/testBacktracking/: network.onnx
DeeployTest/Tests/testConcat/: inputs.npz  outputs.npz
DeeployTest/Tests/testFloat16Pow/: inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/testFloat16RMSNorm/: inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/testFloat16Sqrt/: inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/testFloat2DConvolution/: inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/testFloat2DConvolutionBias/: inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/testFloat2DConvolutionZeroBias/: inputs.npz  network.onnx
DeeployTest/Tests/testFloat2DDWConvolution/: inputs.npz  network.onnx
DeeployTest/Tests/testFloat2DDWConvolutionBias/: outputs.npz
DeeployTest/Tests/testFloat2DDWConvolutionZeroBias/: inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/testFloat2DPadding/: outputs.npz
DeeployTest/Tests/testFloat2dConvLarge/: inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/testFloatAdder/: network.onnx  outputs.npz
DeeployTest/Tests/testFloatDemoTinyViT/: network.onnx  outputs.npz
DeeployTest/Tests/testFloatGEMM/: inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/testFloatGEMMnobias/: inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/testFloatGEMMtransB/: inputs.npz  outputs.npz
DeeployTest/Tests/testFloatGelu/: inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/testFloatLayerNorm/: inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/testFloatMatmul/: network.onnx  outputs.npz
DeeployTest/Tests/testFloatMatmulLarge/: inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/testFloatMatmulLarge256/: inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/testFloatMaxPool/: inputs.npz  network.onnx  outputs.npz
DeeployTest/Tests/testFloatMul/: inputs.npz  (+1 more)
DeeployTest/testUtils/: ProfilingTraceParser.py  __init__.py  codeGenerate.py  deeployRunner.py  dmaUtils.py  graphColoring.py  graphDebug.py  graphDiffUtils.py  platformMapping.py  pytestRunner.py  testRunner.py  tilingUtils.py  typeMapping.py
TargetLibraries/CMSIS/: CMakeLists.txt
TargetLibraries/Chimera/: CMakeLists.txt
TargetLibraries/GAP9/: CMakeLists.txt  third_party
TargetLibraries/MemPool/: CMakeLists.txt
TargetLibraries/PULPOpen/: CMakeLists.txt
TargetLibraries/Snitch/: CMakeLists.txt
TargetLibraries/SoftHier/: CMakeLists.txt
(+5482 files in other folders)
