[build-system]
requires = [
"setuptools>=42",
"wheel",
]
build-backend = "setuptools.build_meta"
[project]
name = "Deeploy"
description = "Deeploy - Bring your networks to your platforms"
version = '0.1.0'
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
'protobuf==4.23.3',
'numpy<2.0.0',
'onnx==1.14.0',
'onnxruntime',
'mako',
'IPython',
'argparse',
'argcomplete',
'pyelftools',
'pylink-square',
'pyserial',
'clang-format',
'toml',
'dill',
'pytest',
'yapf==0.33.0',
'isort==5.12.0',
'autoflake==2.3.0',
"ortools",
"onnx-graphsurgeon",
"sphinx>=7.0.0",
"sphinx-rtd-theme>=1.3.0",
"myst_parser",
"meson==1.3.1", # Avoid QEMU installation issues, see here: https://gitlab.com/qemu-project/qemu/-/issues/1853
"ninja"
]
[tool.setuptools]
packages = ['Deeploy']
