[project]
name = "PULP-Deeploy"
version = '0.2.0'
description = "Deeploy - DNN Compiler for Heterogeneous SoCs"
authors = [
    { name="Victor Jung", email="jungvi@iis.ee.ethz.ch" },
    { name="Philip Wiese", email="wiesep@iis.ee.ethz.ch" },
    { name="Luka Macan", email="luka.macan@unibo.it" },
    { name="Moritz Scherer", email="scheremo@iis.ee.ethz.ch" },
]

license = "Apache-2.0"
readme = "README.md"

requires-python = "==3.10.*"
dependencies = [
'protobuf==4.23.3',
'numpy==1.26.4',
'onnx==1.14.0',
'onnxruntime==1.22.0',
'mako==1.3.10',
'IPython==8.36.0',
'argparse==1.4.0',
'argcomplete==3.6.2',
'pyelftools==0.32',
'pylink-square==1.6.0',
'pyserial==3.5',
'clang-format==20.1.5',
'toml==0.10.2',
'dill==0.4.0',
'pytest==8.3.5',
'yapf==0.33.0',
'isort==5.12.0',
'autoflake==2.3.0',
"ortools==9.7.2996",
'onnx-graphsurgeon==0.3.20',
"sphinx==8.1.3",
"sphinx-rtd-theme==3.0.2",
"myst_parser==4.0.1",
"meson==1.3.1", # Avoid QEMU installation issues, see here: https://gitlab.com/qemu-project/qemu/-/issues/1853
"ninja==1.11.1.4",
"plotly==6.1.2",
"netron==8.3.5",
"debugpy==1.8.14"
]

[project.urls]
Homepage = "https://github.com/pulp-platform/Deeploy"
Issues = "https://github.com/pulp-platform/Deeploy/issues"

[build-system]
requires = [
"setuptools>=42",
"wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["Deeploy*"]
exclude = ["DeeployTest*"]
